# simplog

./: .gitignore  LICENCE  README.md  pyproject.toml
simplog/: __init__.py
