[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplog"
version = "0.1.0"
authors = [
  { name="Luka Mladjenovic", email="luka.mladj01@gmail.com" },
]
description = "A lightweight, simple terminal logging library for beginners."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]